<resources>
    <string name="name">Calculator</string>
    <string name="settings">Settings</string>
    <string name="graph">Graph</string>
    <string name="close">Close</string>

    <string name="menu_calculator">Calculator</string>
    <string name="menu_graphs">Graphs</string>
    <string name="menu_history">History</string>
    <string name="menu_conversions">Conversions</string>

    <string name="graphs_show_graph">Show graph</string>
    <string name="graphs_calculating">Calculating values, please wait</string>

    <string name="conversions_length">Length</string>
    <string name="conversions_area">Area</string>
    <string name="conversions_volume">Volume</string>
    <string name="conversions_weight">Weight</string>
    <string name="conversions_pressure">Pressure</string>
    <string name="conversions_temperature">Temperature</string>
    <string name="conversions_speed">Speed</string>

    <string name="conversions_knots">knots</string>

    <string name="preferences_calculator">Calculator</string>
    <string name="preferences_calculator_clear_history">Clear History</string>
    <string name="preferences_calculator_radians_degrees">Radians/Degrees</string>
    <string name="preferences_calculator_size">Text size</string>
    <string name="preferences_calculator_size_small">Small</string>
    <string name="preferences_calculator_size_normal">Normal</string>
    <string name="preferences_calculator_size_large">Large</string>
    <string name="preferences_calculator_radians">Radians</string>
    <string name="preferences_calculator_degrees">Degrees</string>
    <string name="preferences_calculator_decimal">Decimal places</string>
    <string name="preferences_calculator_scientific">Scientific notation decimal places</string>

    <string name="preferences_graphs">Graphs</string>
    <string name="preferences_graphs_precision">Graph precision</string>
    <string name="preferences_graphs_precision_high">High</string>
    <string name="preferences_graphs_precision_low">Low</string>
    <string name="preferences_graphs_legend">Show legend</string>

    <string name="error_overflow">Overflow</string>
    <string name="error_divBy0">Division by 0</string>
    <string name="error_factorialNotInteger">Factorial only defined for integers</string>
    <string name="error_nSmallerThanR">n must be ≥ r</string>
    <string name="error_rSmallerThan0">r must be &gt; 0</string>
    <string name="error_nOrRNotIntegers">n &amp; r must be integers</string>
    <string name="error_minBiggerThanMax">Min must be &lt; max</string>
    <string name="error_fatal">Fatal error</string>
    <string name="error_negativeEvenRoot">Even root of negative number</string>
    <string name="error_BinaryTooLong">Binary number too long</string>
    <string name="error_OctTooLong">Octal number too long</string>
    <string name="error_noData">No data to display</string>

    <string name="constant_title">Constants</string>
    <string name="constant_light">Speed of light</string>
    <string name="constant_gravity">Constant of gravitation </string>
    <string name="constant_planck">Planck constant</string>
    <string name="constant_elementaryCharge">Elementary charge</string>
    <string name="constant_permittivity">Vacuum permittivity</string>
    <string name="constant_permeability">Vacuum permeability</string>
    <string name="constant_gravityEarth">Gravity of Earth</string>
    <string name="constant_avogadro">Avogadro constant</string>
    <string name="constant_boltzmann">Boltzmann constant</string>
    <string name="constant_faraday">Faraday constant</string>
    <string name="constant_rydberg">Rydberg constant</string>
    <string name="constant_stefanBoltzmann">Stefan-Boltzmann constant</string>
    <string name="constant_electron">Electron mass</string>
    <string name="constant_proton">Proton mass</string>
    <string name="constant_neutron">Neutron mass</string>
    <string name="constant_alpha">Alpha particle mass</string>
    <string name="constant_deuteron">Deuteron mass</string>
    <string name="constant_helion">Helion mass</string>
    <string name="constant_muon">Muon mass</string>
    <string name="constant_tau">Tau mass</string>
    <string name="constant_triton">Triton mass</string>
    <string name="constant_vonKlitzing">von Klitzing constant</string>
    <string name="constant_bohrMagneton">Bohr magneton</string>
    <string name="constant_fineStructure">Fine-structure constant</string>

    <string name="first_start">Begin by swiping from the left or pressing the menu button</string>

    <string-array name="preferences_calculator_radians_degrees">
        <item>@string/preferences_calculator_radians</item>
        <item>@string/preferences_calculator_degrees</item>
    </string-array>
    <string-array name="preferences_calculator_radians_degrees_constant">
        <item>Radians</item>
        <item>Degrees</item>
    </string-array>

    <string-array name="preferences_calculator_size">
        <item>@string/preferences_calculator_size_normal</item>
        <item>@string/preferences_calculator_size_large</item>
    </string-array>

    <string-array name="preferences_graphs_precision">
        <item>@string/preferences_graphs_precision_high</item>
        <item>@string/preferences_graphs_precision_low</item>
    </string-array>
    <string-array name="preferences_graphs_precision_constant">
        <item>High</item>
        <item>Low</item>
    </string-array>
</resources>
